--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -95,7 +95,7 @@ server:
   port: 9000
 
 spring.datasource:
-  url: jdbc:mysql://localhost/test?autoReconnect=true&useSSL=false
+  url: jdbc:mysql://localhost/test?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
   username: root
   password: root
 
