Upgrade to Java 15. Use Gradle taskt from Spring Boot to build Docker image.

--- a/setup/docker/docker-compose.yml
+++ b/setup/docker/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     ports:
       - 9001:9000
     environment:
+      - SPRING_PROFILES_ACTIVE=production
       - DATABASE_HOST=mysql-database
       - DATABASE_PORT=3306
       - DATABASE_NAME=rosette-db
