--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 import org.apache.tools.ant.filters.ReplaceTokens
 
 plugins {
-  id "org.springframework.boot" version "2.4.0"
+  id "org.springframework.boot" version "2.4.2"
   id "io.spring.dependency-management" version "1.0.10.RELEASE"
   id "java"
 }
@@ -10,7 +10,7 @@ group = "se.leafcoders"
 
 java {
   toolchain {
-    languageVersion = JavaLanguageVersion.of(14)
+    languageVersion = JavaLanguageVersion.of(15)
   }
 }
 
@@ -49,13 +49,13 @@ dependencies {
   implementation("io.jsonwebtoken:jjwt:0.9.1")
 
   // For ical feed
-  implementation("net.sf.biweekly:biweekly:0.6.3")
+  implementation("net.sf.biweekly:biweekly:0.6.6")
 
   // Google common libraries
   implementation("com.google.guava:guava:21.0")
 
   // Thumbnailator
-  implementation("net.coobird:thumbnailator:0.4.11")
+  implementation("net.coobird:thumbnailator:0.4.13")
 
   // MP3 audio support
   implementation("com.googlecode.soundlibs:mp3spi:1.9.5.4")
@@ -73,20 +73,9 @@ processResources {
   }  
 }
 
-task buildImage() {
-  group "docker"
-  description "Builds a docker image of the current version."
+bootBuildImage {
+  imageName = "leafcoders/rosette:${project.version}"
 
-  dependsOn clean
-  dependsOn bootJar
-  tasks.findByName('bootJar').mustRunAfter('clean')
-
-  doLast {
-    exec {
-      executable "docker"
-      args "build", "--build-arg", "JAR_VERSION=${project.version}", "-t", "leafcoders/rosette:${project.version}", "."
-    }
-  }
 }
 
 wrapper {
